commit translated contents

--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.borderweight.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.borderweight.yml
@@ -1,43 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.BorderWeight:enum'
-    summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.BorderWeight
-    fullName: Excel.BorderWeight
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.BorderWeight.hairline:member'
-      - 'excel!Excel.BorderWeight.medium:member'
-      - 'excel!Excel.BorderWeight.thick:member'
-      - 'excel!Excel.BorderWeight.thin:member'
-  - uid: 'excel!Excel.BorderWeight.hairline:member'
-    name: hairline
-    fullName: hairline
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Hairline"'
-  - uid: 'excel!Excel.BorderWeight.medium:member'
-    name: medium
-    fullName: medium
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Medium"'
-  - uid: 'excel!Excel.BorderWeight.thick:member'
-    name: thick
-    fullName: thick
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Thick"'
-  - uid: 'excel!Excel.BorderWeight.thin:member'
-    name: thin
-    fullName: thin
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Thin"'
+### YamlMime:TSEnum
+name: Excel.BorderWeight
+uid: excel!Excel.BorderWeight:enum
+package: excel!
+fullName: Excel.BorderWeight
+summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: hairline
+  uid: excel!Excel.BorderWeight.hairline:member
+  package: excel!
+  summary: ''
+- name: medium
+  uid: excel!Excel.BorderWeight.medium:member
+  package: excel!
+  summary: ''
+- name: thick
+  uid: excel!Excel.BorderWeight.thick:member
+  package: excel!
+  summary: ''
+- name: thin
+  uid: excel!Excel.BorderWeight.thin:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: d6c6c444599ac49e4c3548dd8c8a5f1c5d09ea00
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49259163"
