--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.chartaxis.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.chartaxis.yml
@@ -1,323 +1,277 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartAxis:class'
-    summary: |-
-      代表图表中的单个坐标轴。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChartAxis
-    fullName: Excel.ChartAxis
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.ChartAxis#context:member'
-      - 'excel!Excel.ChartAxis#format:member'
-      - 'excel!Excel.ChartAxis#load:member(1)'
-      - 'excel!Excel.ChartAxis#load:member(2)'
-      - 'excel!Excel.ChartAxis#load:member(3)'
-      - 'excel!Excel.ChartAxis#majorGridlines:member'
-      - 'excel!Excel.ChartAxis#majorUnit:member'
-      - 'excel!Excel.ChartAxis#maximum:member'
-      - 'excel!Excel.ChartAxis#minimum:member'
-      - 'excel!Excel.ChartAxis#minorGridlines:member'
-      - 'excel!Excel.ChartAxis#minorUnit:member'
-      - 'excel!Excel.ChartAxis#set:member(1)'
-      - 'excel!Excel.ChartAxis#set:member(2)'
-      - 'excel!Excel.ChartAxis#title:member'
-      - 'excel!Excel.ChartAxis#toJSON:member(1)'
-  - uid: 'excel!Excel.ChartAxis#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.ChartAxis#format:member'
-    summary: |-
-      表示 chart 对象的格式，包括线条和字体格式。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly format: Excel.ChartAxisFormat;'
-      return:
-        type:
-          - 'excel!Excel.ChartAxisFormat:class'
-  - uid: 'excel!Excel.ChartAxis#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.ChartAxisLoadOptions): Excel.ChartAxis;'
-      return:
-        type:
-          - 'excel!Excel.ChartAxis:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.ChartAxisLoadOptions:interface'
-  - uid: 'excel!Excel.ChartAxis#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.ChartAxis;'
-      return:
-        type:
-          - 'excel!Excel.ChartAxis:class'
-        description: |-
+### YamlMime:TSType
+name: Excel.ChartAxis
+uid: excel!Excel.ChartAxis:class
+package: excel!
+fullName: Excel.ChartAxis
+summary: >-
+  代表图表中的单个坐标轴。
 
 
-          #### <a name="examples"></a>示例
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.ChartAxis#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: format
+  uid: excel!Excel.ChartAxis#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    表示 chart 对象的格式，包括线条和字体格式。
 
-          ```javascript
-          // Get the maximum of Chart Axis from Chart1
-          Excel.run(function (ctx) { 
-              var chart = ctx.workbook.worksheets.getItem("Sheet1").charts.getItem("Chart1");    
-              var axis = chart.axes.valueAxis;
-              axis.load('maximum');
-              return ctx.sync().then(function() {
-                      console.log(axis.maximum);
-              });
-          }).catch(function(error) {
-              console.log("Error: " + error);
-              if (error instanceof OfficeExtension.Error) {
-                  console.log("Debug info: " + JSON.stringify(error.debugInfo));
-              }
-          });
-          ```
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.ChartAxis#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly format: Excel.ChartAxisFormat;'
+    return:
+      type: <xref uid="excel!Excel.ChartAxisFormat:class" />
+- name: majorGridlines
+  uid: excel!Excel.ChartAxis#majorGridlines:member
+  package: excel!
+  fullName: majorGridlines
+  summary: >-
+    返回一个表示指定坐标轴的主要网格线的网格线对象。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly majorGridlines: Excel.ChartGridlines;'
+    return:
+      type: <xref uid="excel!Excel.ChartGridlines:class" />
+- name: majorUnit
+  uid: excel!Excel.ChartAxis#majorUnit:member
+  package: excel!
+  fullName: majorUnit
+  summary: >-
+    表示两个主要刻度标记之间的间隔。 可以设置为数字值或空字符串。 返回的值始终为数字。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'majorUnit: any;'
+    return:
+      type: any
+- name: maximum
+  uid: excel!Excel.ChartAxis#maximum:member
+  package: excel!
+  fullName: maximum
+  summary: >-
+    表示数值轴上的最大值。 可以设置为数字值或空字符串（对于自动坐标轴值）。 返回的值始终为数字。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'maximum: any;'
+    return:
+      type: any
+- name: minimum
+  uid: excel!Excel.ChartAxis#minimum:member
+  package: excel!
+  fullName: minimum
+  summary: >-
+    表示数值轴上的最小值。 可以设置为数字值或空字符串（对于自动坐标轴值）。 返回的值始终为数字。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'minimum: any;'
+    return:
+      type: any
+- name: minorGridlines
+  uid: excel!Excel.ChartAxis#minorGridlines:member
+  package: excel!
+  fullName: minorGridlines
+  summary: >-
+    返回一个表示指定坐标轴的次要网格线的网格线对象。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly minorGridlines: Excel.ChartGridlines;'
+    return:
+      type: <xref uid="excel!Excel.ChartGridlines:class" />
+- name: minorUnit
+  uid: excel!Excel.ChartAxis#minorUnit:member
+  package: excel!
+  fullName: minorUnit
+  summary: >-
+    表示两个次要刻度标记之间的间隔。 可以设置为数字值或空字符串（对于自动坐标轴值）。 返回的值始终为数字。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'minorUnit: any;'
+    return:
+      type: any
+- name: title
+  uid: excel!Excel.ChartAxis#title:member
+  package: excel!
+  fullName: title
+  summary: >-
+    表示坐标轴标题。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly title: Excel.ChartAxisTitle;'
+    return:
+      type: <xref uid="excel!Excel.ChartAxisTitle:class" />
+methods:
+- name: load(options)
+  uid: excel!Excel.ChartAxis#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.ChartAxisLoadOptions): Excel.ChartAxis;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.ChartAxis:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.ChartAxis#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.ChartAxis;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.ChartAxis:class" />
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// Get the maximum of Chart Axis from Chart1\nExcel.run(function (ctx) { \n    var chart = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\");    \n    var axis = chart.axes.valueAxis;\n    axis.load('maximum');\n    return ctx.sync().then(function() {\n            console.log(axis.maximum);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.ChartAxis#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.ChartAxis;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.ChartAxis;
-      return:
-        type:
-          - 'excel!Excel.ChartAxis:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.ChartAxis#majorGridlines:member'
-    summary: |-
-      返回一个表示指定坐标轴的主要网格线的网格线对象。
+                }
+    return:
+      type: <xref uid="excel!Excel.ChartAxis:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.ChartAxis#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: majorGridlines
-    fullName: majorGridlines
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly majorGridlines: Excel.ChartGridlines;'
-      return:
-        type:
-          - 'excel!Excel.ChartGridlines:class'
-  - uid: 'excel!Excel.ChartAxis#majorUnit:member'
-    summary: |-
-      表示两个主要刻度标记之间的间隔。 可以设置为数字值或空字符串。 返回的值始终为数字。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: majorUnit
-    fullName: majorUnit
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'majorUnit: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.ChartAxis#maximum:member'
-    summary: |-
-      表示数值轴上的最大值。 可以设置为数字值或空字符串（对于自动坐标轴值）。 返回的值始终为数字。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: maximum
-    fullName: maximum
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'maximum: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.ChartAxis#minimum:member'
-    summary: |-
-      表示数值轴上的最小值。 可以设置为数字值或空字符串（对于自动坐标轴值）。 返回的值始终为数字。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: minimum
-    fullName: minimum
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'minimum: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.ChartAxis#minorGridlines:member'
-    summary: |-
-      返回一个表示指定坐标轴的次要网格线的网格线对象。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: minorGridlines
-    fullName: minorGridlines
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly minorGridlines: Excel.ChartGridlines;'
-      return:
-        type:
-          - 'excel!Excel.ChartGridlines:class'
-  - uid: 'excel!Excel.ChartAxis#minorUnit:member'
-    summary: |-
-      表示两个次要刻度标记之间的间隔。 可以设置为数字值或空字符串（对于自动坐标轴值）。 返回的值始终为数字。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: minorUnit
-    fullName: minorUnit
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'minorUnit: any;'
-      return:
-        type:
-          - any
-  - uid: 'excel!Excel.ChartAxis#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
-
-      `set(properties: Excel.ChartAxis): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.ChartAxisUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.ChartAxisUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.ChartAxis#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.ChartAxis): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.ChartAxis:class'
-  - uid: 'excel!Excel.ChartAxis#title:member'
-    summary: |-
-      表示坐标轴标题。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: title
-    fullName: title
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly title: Excel.ChartAxisTitle;'
-      return:
-        type:
-          - 'excel!Excel.ChartAxisTitle:class'
-  - uid: 'excel!Excel.ChartAxis#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 ChartAxis 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartAxisData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.ChartAxisData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxisData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.ChartAxisFormat:class'
-    name: Excel.ChartAxisFormat
-  - uid: 'excel!Excel.ChartAxis:class'
-    name: Excel.ChartAxis
-  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions:interface'
-    name: Excel.Interfaces.ChartAxisLoadOptions
-  - uid: 'excel!Excel.ChartGridlines:class'
-    name: Excel.ChartGridlines
-  - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData:interface'
-    name: Interfaces.ChartAxisUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.ChartAxisTitle:class'
-    name: Excel.ChartAxisTitle
-  - uid: 'excel!Excel.Interfaces.ChartAxisData:interface'
-    name: Excel.Interfaces.ChartAxisData
+    `set(properties: Excel.ChartAxis): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.ChartAxisUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.ChartAxis#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.ChartAxis): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.ChartAxis:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.ChartAxis#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 ChartAxis 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.ChartAxisData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.ChartAxisData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 106124852590fa3adec2e32f43e70666a597038a
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49258897"
