commit translated contents

--- a/docs/docs-ref-autogen/excel_online/excel/excel.cellpropertiesborderloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.cellpropertiesborderloadoptions.yml
@@ -1,78 +1,86 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.CellPropertiesBorderLoadOptions:interface'
-    summary: |-
-      指定要在对象上加载的属性 `format.borders` 。
+### YamlMime:TSType
+name: Excel.CellPropertiesBorderLoadOptions
+uid: excel!Excel.CellPropertiesBorderLoadOptions:interface
+package: excel!
+fullName: Excel.CellPropertiesBorderLoadOptions
+summary: >-
+  指定要在对象上加载的属性 `format.borders` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.CellPropertiesBorderLoadOptions
-    fullName: Excel.CellPropertiesBorderLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.CellPropertiesBorderLoadOptions#color:member'
-      - 'excel!Excel.CellPropertiesBorderLoadOptions#style:member'
-      - 'excel!Excel.CellPropertiesBorderLoadOptions#tintAndShade:member'
-      - 'excel!Excel.CellPropertiesBorderLoadOptions#weight:member'
-  - uid: 'excel!Excel.CellPropertiesBorderLoadOptions#color:member'
-    summary: |-
-      指定是否在属性上进行加载 `color` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.CellPropertiesBorderLoadOptions#style:member'
-    summary: |-
-      指定是否在属性上进行加载 `style` 。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.CellPropertiesBorderLoadOptions#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    指定是否在属性上进行加载 `color` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.CellPropertiesBorderLoadOptions#tintAndShade:member'
-    summary: |-
-      指定是否在属性上进行加载 `tintAndShade` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tintAndShade
-    fullName: tintAndShade
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tintAndShade?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.CellPropertiesBorderLoadOptions#weight:member'
-    summary: |-
-      指定是否在属性上进行加载 `weight` 。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: boolean;'
+    return:
+      type: boolean
+- name: style
+  uid: excel!Excel.CellPropertiesBorderLoadOptions#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    指定是否在属性上进行加载 `style` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: weight
-    fullName: weight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'weight?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: boolean;'
+    return:
+      type: boolean
+- name: tintAndShade
+  uid: excel!Excel.CellPropertiesBorderLoadOptions#tintAndShade:member
+  package: excel!
+  fullName: tintAndShade
+  summary: >-
+    指定是否在属性上进行加载 `tintAndShade` 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tintAndShade?: boolean;'
+    return:
+      type: boolean
+- name: weight
+  uid: excel!Excel.CellPropertiesBorderLoadOptions#weight:member
+  package: excel!
+  fullName: weight
+  summary: >-
+    指定是否在属性上进行加载 `weight` 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'weight?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 567cc93a64556022e2c547d9761f674bc1ead1a5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49267430"
