--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartareaformatdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartareaformatdata.yml
@@ -1,89 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
-    summary: 描述通过调用返回的数据的接口`chartAreaFormat.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartAreaFormatData
-    fullName: Excel.Interfaces.ChartAreaFormatData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartAreaFormatData#border:member'
-      - 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme:member'
-      - 'excel!Excel.Interfaces.ChartAreaFormatData#font:member'
-      - 'excel!Excel.Interfaces.ChartAreaFormatData#roundedCorners:member'
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#border:member'
-    summary: |-
-      代表图表区域的边框格式，包括颜色、linestyle 和粗细。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartAreaFormatData
+uid: excel!Excel.Interfaces.ChartAreaFormatData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartAreaFormatData
+summary: 描述通过调用返回的数据的接口 `chartAreaFormat.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: border
+  uid: excel!Excel.Interfaces.ChartAreaFormatData#border:member
+  package: excel!
+  fullName: border
+  summary: >-
+    代表图表区域的边框格式，包括颜色、linestyle 和粗细。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: border
-    fullName: border
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'border?: Excel.Interfaces.ChartBorderData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartBorderData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme:member'
-    summary: |-
-      指定图表的配色方案。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: colorScheme
-    fullName: colorScheme
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'colorScheme?: Excel.ChartColorScheme | "ColorfulPalette1" | "ColorfulPalette2" | "ColorfulPalette3" | "ColorfulPalette4" | "MonochromaticPalette1" | "MonochromaticPalette2" | "MonochromaticPalette3" | "MonochromaticPalette4" | "MonochromaticPalette5" | "MonochromaticPalette6" | "MonochromaticPalette7" | "MonochromaticPalette8" | "MonochromaticPalette9" | "MonochromaticPalette10" | "MonochromaticPalette11" | "MonochromaticPalette12" | "MonochromaticPalette13";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#font:member'
-    summary: |-
-      表示当前对象的字体属性（字体名称、字体大小、颜色等）。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'border?: Excel.Interfaces.ChartBorderData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartBorderData:interface" />
+- name: colorScheme
+  uid: excel!Excel.Interfaces.ChartAreaFormatData#colorScheme:member
+  package: excel!
+  fullName: colorScheme
+  summary: >-
+    指定图表的配色方案。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Excel.Interfaces.ChartFontData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartFontData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#roundedCorners:member'
-    summary: |-
-      指定图表的图表区是否有圆角。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: roundedCorners
-    fullName: roundedCorners
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'roundedCorners?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartBorderData:interface'
-    name: Excel.Interfaces.ChartBorderData
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme~0:complex'
-    name: Excel.ChartColorScheme | "ColorfulPalette1" | "ColorfulPalette2" | "ColorfulPalette3" | "ColorfulPalette4" | "MonochromaticPalette1" | "MonochromaticPalette2" | "MonochromaticPalette3" | "MonochromaticPalette4" | "MonochromaticPalette5" | "MonochromaticPalette6" | "MonochromaticPalette7" | "MonochromaticPalette8" | "MonochromaticPalette9" | "MonochromaticPalette10" | "MonochromaticPalette11" | "MonochromaticPalette12" | "MonochromaticPalette13"
-    fullName: Excel.ChartColorScheme | "ColorfulPalette1" | "ColorfulPalette2" | "ColorfulPalette3" | "ColorfulPalette4" | "MonochromaticPalette1" | "MonochromaticPalette2" | "MonochromaticPalette3" | "MonochromaticPalette4" | "MonochromaticPalette5" | "MonochromaticPalette6" | "MonochromaticPalette7" | "MonochromaticPalette8" | "MonochromaticPalette9" | "MonochromaticPalette10" | "MonochromaticPalette11" | "MonochromaticPalette12" | "MonochromaticPalette13"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartColorScheme:enum'
-        name: Excel.ChartColorScheme
-        fullName: Excel.ChartColorScheme
-      - name: ' | "ColorfulPalette1" | "ColorfulPalette2" | "ColorfulPalette3" | "ColorfulPalette4" | "MonochromaticPalette1" | "MonochromaticPalette2" | "MonochromaticPalette3" | "MonochromaticPalette4" | "MonochromaticPalette5" | "MonochromaticPalette6" | "MonochromaticPalette7" | "MonochromaticPalette8" | "MonochromaticPalette9" | "MonochromaticPalette10" | "MonochromaticPalette11" | "MonochromaticPalette12" | "MonochromaticPalette13"'
-        fullName: ' | "ColorfulPalette1" | "ColorfulPalette2" | "ColorfulPalette3" | "ColorfulPalette4" | "MonochromaticPalette1" | "MonochromaticPalette2" | "MonochromaticPalette3" | "MonochromaticPalette4" | "MonochromaticPalette5" | "MonochromaticPalette6" | "MonochromaticPalette7" | "MonochromaticPalette8" | "MonochromaticPalette9" | "MonochromaticPalette10" | "MonochromaticPalette11" | "MonochromaticPalette12" | "MonochromaticPalette13"'
-  - uid: 'excel!Excel.Interfaces.ChartFontData:interface'
-    name: Excel.Interfaces.ChartFontData
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'colorScheme?: Excel.ChartColorScheme | "ColorfulPalette1" | "ColorfulPalette2" | "ColorfulPalette3" | "ColorfulPalette4" | "MonochromaticPalette1" | "MonochromaticPalette2" | "MonochromaticPalette3" | "MonochromaticPalette4" | "MonochromaticPalette5" | "MonochromaticPalette6" | "MonochromaticPalette7" | "MonochromaticPalette8" | "MonochromaticPalette9" | "MonochromaticPalette10" | "MonochromaticPalette11" | "MonochromaticPalette12" | "MonochromaticPalette13";'
+    return:
+      type: <xref uid="excel!Excel.ChartColorScheme:enum" /> | "ColorfulPalette1" | "ColorfulPalette2" | "ColorfulPalette3" | "ColorfulPalette4" | "MonochromaticPalette1" | "MonochromaticPalette2" | "MonochromaticPalette3" | "MonochromaticPalette4" | "MonochromaticPalette5" | "MonochromaticPalette6" | "MonochromaticPalette7" | "MonochromaticPalette8" | "MonochromaticPalette9" | "MonochromaticPalette10" | "MonochromaticPalette11" | "MonochromaticPalette12" | "MonochromaticPalette13"
+- name: font
+  uid: excel!Excel.Interfaces.ChartAreaFormatData#font:member
+  package: excel!
+  fullName: font
+  summary: >-
+    表示当前对象的字体属性（字体名称、字体大小、颜色等）。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Excel.Interfaces.ChartFontData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartFontData:interface" />
+- name: roundedCorners
+  uid: excel!Excel.Interfaces.ChartAreaFormatData#roundedCorners:member
+  package: excel!
+  fullName: roundedCorners
+  summary: >-
+    指定图表的图表区是否有圆角。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'roundedCorners?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 2ed82bfbb15298cef8f49129371a23f4db9e3edd
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49267045"
