commit translated contents

--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangeformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangeformatloadoptions.yml
@@ -1,180 +1,178 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions:interface'
-    summary: |-
-      一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
+### YamlMime:TSType
+name: Excel.Interfaces.RangeFormatLoadOptions
+uid: excel!Excel.Interfaces.RangeFormatLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.RangeFormatLoadOptions
+summary: >-
+  一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.RangeFormatLoadOptions
-    fullName: Excel.Interfaces.RangeFormatLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#borders:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#columnWidth:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#fill:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#font:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#horizontalAlignment:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#protection:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#rowHeight:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#verticalAlignment:member'
-      - 'excel!Excel.Interfaces.RangeFormatLoadOptions#wrapText:member'
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#borders:member'
-    summary: |-
-      应用于整个区域的 Border 对象的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: borders
-    fullName: borders
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'borders?: Excel.Interfaces.RangeBorderCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#columnWidth:member'
-    summary: |-
-      指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: borders
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#borders:member
+  package: excel!
+  fullName: borders
+  summary: >-
+    应用于整个区域的 Border 对象的集合。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: columnWidth
-    fullName: columnWidth
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnWidth?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#fill:member'
-    summary: |-
-      返回在整个区域内定义的 fill 对象。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: fill
-    fullName: fill
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'fill?: Excel.Interfaces.RangeFillLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#font:member'
-    summary: |-
-      返回在整个区域内定义的 Font 对象。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'borders?: Excel.Interfaces.RangeBorderCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface" />
+- name: columnWidth
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#columnWidth:member
+  package: excel!
+  fullName: columnWidth
+  summary: >-
+    指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Excel.Interfaces.RangeFontLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#horizontalAlignment:member'
-    summary: |-
-      表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: horizontalAlignment
-    fullName: horizontalAlignment
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'horizontalAlignment?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#protection:member'
-    summary: |-
-      返回某一区域的格式 protection 对象。
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnWidth?: boolean;'
+    return:
+      type: boolean
+- name: fill
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#fill:member
+  package: excel!
+  fullName: fill
+  summary: >-
+    返回在整个区域内定义的 fill 对象。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: protection
-    fullName: protection
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'protection?: Excel.Interfaces.FormatProtectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.FormatProtectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#rowHeight:member'
-    summary: |-
-      区域中所有行的高度。 如果行高不一致，则将返回 null。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rowHeight
-    fullName: rowHeight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowHeight?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#verticalAlignment:member'
-    summary: |-
-      表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'fill?: Excel.Interfaces.RangeFillLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeFillLoadOptions:interface" />
+- name: font
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#font:member
+  package: excel!
+  fullName: font
+  summary: >-
+    返回在整个区域内定义的 Font 对象。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: verticalAlignment
-    fullName: verticalAlignment
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'verticalAlignment?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFormatLoadOptions#wrapText:member'
-    summary: |-
-      指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: wrapText
-    fullName: wrapText
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'wrapText?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface'
-    name: Excel.Interfaces.RangeBorderCollectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
-    name: Excel.Interfaces.RangeFillLoadOptions
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
-    name: Excel.Interfaces.RangeFontLoadOptions
-  - uid: 'excel!Excel.Interfaces.FormatProtectionLoadOptions:interface'
-    name: Excel.Interfaces.FormatProtectionLoadOptions
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Excel.Interfaces.RangeFontLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeFontLoadOptions:interface" />
+- name: horizontalAlignment
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#horizontalAlignment:member
+  package: excel!
+  fullName: horizontalAlignment
+  summary: >-
+    表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'horizontalAlignment?: boolean;'
+    return:
+      type: boolean
+- name: protection
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#protection:member
+  package: excel!
+  fullName: protection
+  summary: >-
+    返回某一区域的格式 protection 对象。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'protection?: Excel.Interfaces.FormatProtectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.FormatProtectionLoadOptions:interface" />
+- name: rowHeight
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#rowHeight:member
+  package: excel!
+  fullName: rowHeight
+  summary: >-
+    区域中所有行的高度。 如果行高不一致，则将返回 null。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowHeight?: boolean;'
+    return:
+      type: boolean
+- name: verticalAlignment
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#verticalAlignment:member
+  package: excel!
+  fullName: verticalAlignment
+  summary: >-
+    表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'verticalAlignment?: boolean;'
+    return:
+      type: boolean
+- name: wrapText
+  uid: excel!Excel.Interfaces.RangeFormatLoadOptions#wrapText:member
+  package: excel!
+  fullName: wrapText
+  summary: >-
+    指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'wrapText?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: b58a8914675d71699db8d565706ffeeedd859660
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49273310"
