--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.fivearrowsgrayset.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.fivearrowsgrayset.yml
@@ -1,74 +1,78 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.FiveArrowsGraySet:interface'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.FiveArrowsGraySet
-    fullName: Excel.FiveArrowsGraySet
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.FiveArrowsGraySet#grayDownArrow:member'
-      - 'excel!Excel.FiveArrowsGraySet#grayDownInclineArrow:member'
-      - 'excel!Excel.FiveArrowsGraySet#graySideArrow:member'
-      - 'excel!Excel.FiveArrowsGraySet#grayUpArrow:member'
-      - 'excel!Excel.FiveArrowsGraySet#grayUpInclineArrow:member'
-  - uid: 'excel!Excel.FiveArrowsGraySet#grayDownArrow:member'
-    name: grayDownArrow
-    fullName: grayDownArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'grayDownArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveArrowsGraySet#grayDownInclineArrow:member'
-    name: grayDownInclineArrow
-    fullName: grayDownInclineArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'grayDownInclineArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveArrowsGraySet#graySideArrow:member'
-    name: graySideArrow
-    fullName: graySideArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'graySideArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveArrowsGraySet#grayUpArrow:member'
-    name: grayUpArrow
-    fullName: grayUpArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'grayUpArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveArrowsGraySet#grayUpInclineArrow:member'
-    name: grayUpInclineArrow
-    fullName: grayUpInclineArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'grayUpInclineArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-references:
-  - uid: 'excel!Excel.Icon:interface'
-    name: Icon
+### YamlMime:TSType
+name: Excel.FiveArrowsGraySet
+uid: excel!Excel.FiveArrowsGraySet:interface
+package: excel!
+fullName: Excel.FiveArrowsGraySet
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: grayDownArrow
+  uid: excel!Excel.FiveArrowsGraySet#grayDownArrow:member
+  package: excel!
+  fullName: grayDownArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'grayDownArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: grayDownInclineArrow
+  uid: excel!Excel.FiveArrowsGraySet#grayDownInclineArrow:member
+  package: excel!
+  fullName: grayDownInclineArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'grayDownInclineArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: graySideArrow
+  uid: excel!Excel.FiveArrowsGraySet#graySideArrow:member
+  package: excel!
+  fullName: graySideArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'graySideArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: grayUpArrow
+  uid: excel!Excel.FiveArrowsGraySet#grayUpArrow:member
+  package: excel!
+  fullName: grayUpArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'grayUpArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: grayUpInclineArrow
+  uid: excel!Excel.FiveArrowsGraySet#grayUpInclineArrow:member
+  package: excel!
+  fullName: grayUpInclineArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'grayUpInclineArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+metadata:
+  ms.openlocfilehash: f0ab4ed7badfe17fc53a9a319b7d582339708f5e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49272736"
