--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlineformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlineformatupdatedata.yml
@@ -1,69 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartLineFormatUpdateData:interface'
-    summary: '一个用于更新 ChartLineFormat 对象上的数据的接口，可用于`chartLineFormat.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartLineFormatUpdateData
-    fullName: Excel.Interfaces.ChartLineFormatUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartLineFormatUpdateData#color:member'
-      - 'excel!Excel.Interfaces.ChartLineFormatUpdateData#lineStyle:member'
-      - 'excel!Excel.Interfaces.ChartLineFormatUpdateData#weight:member'
-  - uid: 'excel!Excel.Interfaces.ChartLineFormatUpdateData#color:member'
-    summary: |-
-      表示图表中的线条颜色的 HTML 颜色代码。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartLineFormatUpdateData
+uid: excel!Excel.Interfaces.ChartLineFormatUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartLineFormatUpdateData
+summary: 一个用于更新 ChartLineFormat 对象上的数据的接口，可用于 `chartLineFormat.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.Interfaces.ChartLineFormatUpdateData#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    表示图表中的线条颜色的 HTML 颜色代码。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ChartLineFormatUpdateData#lineStyle:member'
-    summary: |-
-      代表线条样式。 有关详细信息，请参阅 ChartLineStyle。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: lineStyle
-    fullName: lineStyle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'lineStyle?: Excel.ChartLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLineFormatUpdateData#lineStyle~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartLineFormatUpdateData#weight:member'
-    summary: |-
-      表示线条的粗细（以磅为单位）。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+- name: lineStyle
+  uid: excel!Excel.Interfaces.ChartLineFormatUpdateData#lineStyle:member
+  package: excel!
+  fullName: lineStyle
+  summary: >-
+    代表线条样式。 有关详细信息，请参阅 ChartLineStyle。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: weight
-    fullName: weight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'weight?: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'excel!Excel.Interfaces.ChartLineFormatUpdateData#lineStyle~0:complex'
-    name: Excel.ChartLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot"
-    fullName: Excel.ChartLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartLineStyle:enum'
-        name: Excel.ChartLineStyle
-        fullName: Excel.ChartLineStyle
-      - name: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot"'
-        fullName: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot"'
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'lineStyle?: Excel.ChartLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot";'
+    return:
+      type: <xref uid="excel!Excel.ChartLineStyle:enum" /> | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot"
+- name: weight
+  uid: excel!Excel.Interfaces.ChartLineFormatUpdateData#weight:member
+  package: excel!
+  fullName: weight
+  summary: >-
+    表示线条的粗细（以磅为单位）。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'weight?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 91ec9708aba42d337258f391d1e6e3d3d50506bd
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49272288"
