--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartmapoptionsdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartmapoptionsdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartMapOptionsData:interface'
-    summary: 描述通过调用返回的数据的接口`chartMapOptions.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartMapOptionsData
-    fullName: Excel.Interfaces.ChartMapOptionsData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ChartMapOptionsData
+uid: excel!Excel.Interfaces.ChartMapOptionsData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartMapOptionsData
+summary: 描述通过调用返回的数据的接口 `chartMapOptions.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 42f83a8e14e041ac8257c3df94af47b49f93ebcb
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49272225"
