--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartpivotoptionsdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartpivotoptionsdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData:interface'
-    summary: 描述通过调用返回的数据的接口`chartPivotOptions.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartPivotOptionsData
-    fullName: Excel.Interfaces.ChartPivotOptionsData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ChartPivotOptionsData
+uid: excel!Excel.Interfaces.ChartPivotOptionsData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartPivotOptionsData
+summary: 描述通过调用返回的数据的接口 `chartPivotOptions.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 3edd87ab60f2efe0f412dee26f32b909d5fcb93b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49272218"
