--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartpointformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartpointformatdata.yml
@@ -1,30 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartPointFormatData:interface'
-    summary: 描述通过调用返回的数据的接口`chartPointFormat.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartPointFormatData
-    fullName: Excel.Interfaces.ChartPointFormatData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartPointFormatData#border:member'
-  - uid: 'excel!Excel.Interfaces.ChartPointFormatData#border:member'
-    summary: |-
-      表示图表数据点的边框格式，包括颜色、样式和权重信息。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartPointFormatData
+uid: excel!Excel.Interfaces.ChartPointFormatData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartPointFormatData
+summary: 描述通过调用返回的数据的接口 `chartPointFormat.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: border
+  uid: excel!Excel.Interfaces.ChartPointFormatData#border:member
+  package: excel!
+  fullName: border
+  summary: >-
+    表示图表数据点的边框格式，包括颜色、样式和权重信息。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: border
-    fullName: border
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'border?: Excel.Interfaces.ChartBorderData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartBorderData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartBorderData:interface'
-    name: Excel.Interfaces.ChartBorderData
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'border?: Excel.Interfaces.ChartBorderData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartBorderData:interface" />
+metadata:
+  ms.openlocfilehash: aecc48ce40e088261eecde173aae681b46ba0384
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49272162"
