commit translated contents

--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.applicationloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.applicationloadoptions.yml
@@ -1,94 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions:interface'
-    summary: |-
-      表示用于管理工作簿的 Excel 应用程序。
+### YamlMime:TSType
+name: Excel.Interfaces.ApplicationLoadOptions
+uid: excel!Excel.Interfaces.ApplicationLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ApplicationLoadOptions
+summary: >-
+  表示用于管理工作簿的 Excel 应用程序。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ApplicationLoadOptions
-    fullName: Excel.Interfaces.ApplicationLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ApplicationLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationEngineVersion:member'
-      - 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationMode:member'
-      - 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationState:member'
-      - 'excel!Excel.Interfaces.ApplicationLoadOptions#iterativeCalculation:member'
-  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationEngineVersion:member'
-    summary: |-
-      返回用于上次完整重新计算的 Excel 计算引擎版本。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: calculationEngineVersion
-    fullName: calculationEngineVersion
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'calculationEngineVersion?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationMode:member'
-    summary: |-
-      返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。 可能的值包括：`Automatic`<!-- -->，Excel 控制重新计算的位置;`AutomaticExceptTables`<!-- -->，Excel 在其中控制重新计算，但忽略表中的更改。`Manual`<!-- -->，在用户请求计算时完成计算。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ApplicationLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: calculationEngineVersion
+  uid: excel!Excel.Interfaces.ApplicationLoadOptions#calculationEngineVersion:member
+  package: excel!
+  fullName: calculationEngineVersion
+  summary: >-
+    返回用于上次完整重新计算的 Excel 计算引擎版本。
 
-      \[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: calculationMode
-    fullName: calculationMode
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'calculationMode?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationState:member'
-    summary: |-
-      返回应用程序的计算状态。 有关详细信息，请参阅 Excel.CalculationState。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: calculationState
-    fullName: calculationState
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'calculationState?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#iterativeCalculation:member'
-    summary: |-
-      返回“迭代计算”设置。 在 Windows 和 Mac 上的 Excel 中，这些设置将应用于 Excel 应用程序。 在 Excel 中的 web 和其他平台上，这些设置将应用于活动工作簿。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'calculationEngineVersion?: boolean;'
+    return:
+      type: boolean
+- name: calculationMode
+  uid: excel!Excel.Interfaces.ApplicationLoadOptions#calculationMode:member
+  package: excel!
+  fullName: calculationMode
+  summary: >-
+    返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。 可能的值包括： `Automatic`<!-- -->，Excel 控制重新计算的位置; `AutomaticExceptTables`<!-- -->，Excel 在其中控制重新计算，但忽略表中的更改。 `Manual`<!-- -->，在用户请求计算时完成计算。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: iterativeCalculation
-    fullName: iterativeCalculation
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'iterativeCalculation?: Excel.Interfaces.IterativeCalculationLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
-    name: Excel.Interfaces.IterativeCalculationLoadOptions
+
+    \[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'calculationMode?: boolean;'
+    return:
+      type: boolean
+- name: calculationState
+  uid: excel!Excel.Interfaces.ApplicationLoadOptions#calculationState:member
+  package: excel!
+  fullName: calculationState
+  summary: >-
+    返回应用程序的计算状态。 有关详细信息，请参阅 Excel.CalculationState。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'calculationState?: boolean;'
+    return:
+      type: boolean
+- name: iterativeCalculation
+  uid: excel!Excel.Interfaces.ApplicationLoadOptions#iterativeCalculation:member
+  package: excel!
+  fullName: iterativeCalculation
+  summary: >-
+    返回“迭代计算”设置。 在 Windows 和 Mac 上的 Excel 中，这些设置将应用于 Excel 应用程序。 在 Excel 中的 web 和其他平台上，这些设置将应用于活动工作簿。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'iterativeCalculation?: Excel.Interfaces.IterativeCalculationLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 59ac1b7c7c65abdcbca3e89be36279f8a8530179
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49290558"
