--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.bindingloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.bindingloadoptions.yml
@@ -1,59 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.BindingLoadOptions:interface'
-    summary: |-
-      表示工作簿中定义的 Office.js 绑定。
+### YamlMime:TSType
+name: Excel.Interfaces.BindingLoadOptions
+uid: excel!Excel.Interfaces.BindingLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.BindingLoadOptions
+summary: >-
+  表示工作簿中定义的 Office.js 绑定。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.BindingLoadOptions
-    fullName: Excel.Interfaces.BindingLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.BindingLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.BindingLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.BindingLoadOptions#type:member'
-  - uid: 'excel!Excel.Interfaces.BindingLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.BindingLoadOptions#id:member'
-    summary: |-
-      表示绑定标识符。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.BindingLoadOptions#type:member'
-    summary: |-
-      返回绑定的类型。 有关详细信息，请参阅 BindingType。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.BindingLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.BindingLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    表示绑定标识符。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: excel!Excel.Interfaces.BindingLoadOptions#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    返回绑定的类型。 有关详细信息，请参阅 BindingType。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: ececb996997673b06ec793e5ee1c426a5946b963
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49290299"
