commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.pivotmanualfilter.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pivotmanualfilter.yml
@@ -1,42 +1,38 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.PivotManualFilter:interface'
-    summary: |-
-      用于手动筛选的可配置模板，以应用于透视字段。 定义为使 `condition` 筛选器能够正常工作而需要设置的条件。
+### YamlMime:TSType
+name: Excel.PivotManualFilter
+uid: excel!Excel.PivotManualFilter:interface
+package: excel!
+fullName: Excel.PivotManualFilter
+summary: >-
+  用于手动筛选的可配置模板，以应用于透视字段。 定义为使 `condition` 筛选器能够正常工作而需要设置的条件。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.PivotManualFilter
-    fullName: Excel.PivotManualFilter
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.PivotManualFilter#selectedItems:member'
-  - uid: 'excel!Excel.PivotManualFilter#selectedItems:member'
-    summary: |-
-      要手动筛选的选定项的列表。 这些项必须是所选字段中现有和有效的项。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: selectedItems
-    fullName: selectedItems
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'selectedItems?: (string | PivotItem)[];'
-      return:
-        type:
-          - 'excel!Excel.PivotManualFilter#selectedItems~0:complex'
-references:
-  - uid: 'excel!Excel.PivotManualFilter#selectedItems~0:complex'
-    name: '(string | PivotItem)[]'
-    fullName: '(string | Excel.PivotItem)[]'
-    spec.typeScript:
-      - name: '(string | '
-        fullName: '(string | '
-      - uid: 'excel!Excel.PivotItem:class'
-        name: PivotItem
-        fullName: Excel.PivotItem
-      - name: ')[]'
-        fullName: ')[]'
+  \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: selectedItems
+  uid: excel!Excel.PivotManualFilter#selectedItems:member
+  package: excel!
+  fullName: selectedItems
+  summary: >-
+    要手动筛选的选定项的列表。 这些项必须是所选字段中现有和有效的项。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'selectedItems?: (string | PivotItem)[];'
+    return:
+      type: (string | <xref uid="excel!Excel.PivotItem:class" />)[]
+metadata:
+  ms.openlocfilehash: 7abd86c3cba840a2f049dab145aaf85b0e96e989
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49316906"
