--- a/docs/docs-ref-autogen/excel/excel/excel.pivottablestylecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pivottablestylecollection.yml
@@ -1,291 +1,233 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.PivotTableStyleCollection:class'
-    summary: |-
-      代表数据透视表样式的集合。
+### YamlMime:TSType
+name: Excel.PivotTableStyleCollection
+uid: excel!Excel.PivotTableStyleCollection:class
+package: excel!
+fullName: Excel.PivotTableStyleCollection
+summary: >-
+  代表数据透视表样式的集合。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.PivotTableStyleCollection
-    fullName: Excel.PivotTableStyleCollection
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.PivotTableStyleCollection#add:member(1)'
-      - 'excel!Excel.PivotTableStyleCollection#context:member'
-      - 'excel!Excel.PivotTableStyleCollection#getCount:member(1)'
-      - 'excel!Excel.PivotTableStyleCollection#getDefault:member(1)'
-      - 'excel!Excel.PivotTableStyleCollection#getItem:member(1)'
-      - 'excel!Excel.PivotTableStyleCollection#getItemOrNullObject:member(1)'
-      - 'excel!Excel.PivotTableStyleCollection#items:member'
-      - 'excel!Excel.PivotTableStyleCollection#load:member(1)'
-      - 'excel!Excel.PivotTableStyleCollection#load:member(2)'
-      - 'excel!Excel.PivotTableStyleCollection#load:member(3)'
-      - 'excel!Excel.PivotTableStyleCollection#setDefault:member(1)'
-      - 'excel!Excel.PivotTableStyleCollection#toJSON:member(1)'
-  - uid: 'excel!Excel.PivotTableStyleCollection#add:member(1)'
-    summary: |-
-      使用指定名称创建空白 PivotTableStyle。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: 'add(name, makeUniqueName)'
-    fullName: 'add(name, makeUniqueName)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'add(name: string, makeUniqueName?: boolean): Excel.PivotTableStyle;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyle:class'
-        description: 新创建的 PivotTableStyle。
-      parameters:
-        - id: name
-          description: 新 PivotTableStyle 的唯一名称。 如果名称已在使用中，则将引发无效参数异常。
-          type:
-            - string
-        - id: makeUniqueName
-          description: 可选，默认值为 false。 如果为 true，则将数字追加到名称，以便根据需要使其唯一。
-          type:
-            - boolean
-  - uid: 'excel!Excel.PivotTableStyleCollection#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.PivotTableStyleCollection#getCount:member(1)'
-    summary: |-
-      获取集合中 PivotTable 的数量。
+  \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.PivotTableStyleCollection#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: items
+  uid: excel!Excel.PivotTableStyleCollection#items:member
+  package: excel!
+  fullName: items
+  summary: 获取此集合中已加载的子项。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly items: Excel.PivotTableStyle[];'
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyle:class" />[]
+methods:
+- name: add(name, makeUniqueName)
+  uid: excel!Excel.PivotTableStyleCollection#add:member(1)
+  package: excel!
+  fullName: add(name, makeUniqueName)
+  summary: >-
+    使用指定名称创建空白 PivotTableStyle。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getCount()
-    fullName: getCount()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getCount(): OfficeExtension.ClientResult<number>;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyleCollection#getCount~0:complex'
-        description: ''
-  - uid: 'excel!Excel.PivotTableStyleCollection#getDefault:member(1)'
-    summary: |-
-      获取父对象范围的默认 PivotTableStyle。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getDefault()
-    fullName: getDefault()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getDefault(): Excel.PivotTableStyle;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyle:class'
-        description: 作为当前默认 PivotTableStyle 的 PivotTableStyle 对象。
-  - uid: 'excel!Excel.PivotTableStyleCollection#getItem:member(1)'
-    summary: |-
-      按名称获取 PivotTableStyle。
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'add(name: string, makeUniqueName?: boolean): Excel.PivotTableStyle;'
+    parameters:
+    - id: name
+      description: 新 PivotTableStyle 的唯一名称。 如果名称已在使用中，则将引发无效参数异常。
+      type: string
+    - id: makeUniqueName
+      description: 可选，默认值为 false。 如果为 true，则将数字追加到名称，以便根据需要使其唯一。
+      type: boolean
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyle:class" />
+      description: 新创建的 PivotTableStyle。
+- name: getCount()
+  uid: excel!Excel.PivotTableStyleCollection#getCount:member(1)
+  package: excel!
+  fullName: getCount()
+  summary: >-
+    获取集合中 PivotTable 的数量。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getItem(name)
-    fullName: getItem(name)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItem(name: string): Excel.PivotTableStyle;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyle:class'
-        description: 其名称与输入匹配的 PivotTableStyle 对象。
-      parameters:
-        - id: name
-          description: 要检索的 PivotTableStyle 的名称。
-          type:
-            - string
-  - uid: 'excel!Excel.PivotTableStyleCollection#getItemOrNullObject:member(1)'
-    summary: |-
-      按名称获取 PivotTableStyle。 如果没有 PivotTableStyle，将返回 null 对象。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getItemOrNullObject(name)
-    fullName: getItemOrNullObject(name)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItemOrNullObject(name: string): Excel.PivotTableStyle;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyle:class'
-        description: 其名称与输入匹配的 PivotTableStyle 对象。
-      parameters:
-        - id: name
-          description: 要检索的 PivotTableStyle 的名称。
-          type:
-            - string
-  - uid: 'excel!Excel.PivotTableStyleCollection#items:member'
-    summary: 获取此集合中已加载的子项。
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly items: Excel.PivotTableStyle[];'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyleCollection#items~0:complex'
-  - uid: 'excel!Excel.PivotTableStyleCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.PivotTableStyleCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.PivotTableStyleCollection;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyleCollection:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.PivotTableStyleCollection#load~0:complex'
-  - uid: 'excel!Excel.PivotTableStyleCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.PivotTableStyleCollection;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyleCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.PivotTableStyleCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.PivotTableStyleCollection;'
-      return:
-        type:
-          - 'excel!Excel.PivotTableStyleCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - 'office!OfficeExtension.LoadOption:interface'
-  - uid: 'excel!Excel.PivotTableStyleCollection#setDefault:member(1)'
-    summary: |-
-      设置在父对象范围内使用的默认 PivotTableStyle。
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getCount(): OfficeExtension.ClientResult<number>;'
+    return:
+      type: <xref uid="office!OfficeExtension.ClientResult:class" />&lt;number&gt;
+      description: ''
+- name: getDefault()
+  uid: excel!Excel.PivotTableStyleCollection#getDefault:member(1)
+  package: excel!
+  fullName: getDefault()
+  summary: >-
+    获取父对象范围的默认 PivotTableStyle。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: setDefault(newDefaultStyle)
-    fullName: setDefault(newDefaultStyle)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'setDefault(newDefaultStyle: PivotTableStyle | string): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: newDefaultStyle
-          description: 应为新的默认值的 PivotTableStyle 对象的 PivotTableStyle 对象或名称。
-          type:
-            - 'excel!Excel.PivotTableStyleCollection#setDefault~0:complex'
-  - uid: 'excel!Excel.PivotTableStyleCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `Excel.PivotTableStyleCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.PivotTableStyleCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.PivotTableStyleCollectionData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotTableStyleCollectionData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.PivotTableStyle:class'
-    name: Excel.PivotTableStyle
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.PivotTableStyleCollection#getCount~0:complex'
-    name: OfficeExtension.ClientResult<number>
-    fullName: OfficeExtension.ClientResult<number>
-    spec.typeScript:
-      - uid: 'office!OfficeExtension.ClientResult:class'
-        name: OfficeExtension.ClientResult
-        fullName: OfficeExtension.ClientResult
-      - name: <number>
-        fullName: <number>
-  - uid: 'excel!Excel.PivotTableStyleCollection#items~0:complex'
-    name: 'Excel.PivotTableStyle[]'
-    fullName: 'Excel.PivotTableStyle[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.PivotTableStyle:class'
-        name: Excel.PivotTableStyle
-        fullName: Excel.PivotTableStyle
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'excel!Excel.PivotTableStyleCollection:class'
-    name: Excel.PivotTableStyleCollection
-  - uid: 'excel!Excel.PivotTableStyleCollection#load~0:complex'
-    name: Excel.Interfaces.PivotTableStyleCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-    fullName: Excel.Interfaces.PivotTableStyleCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.PivotTableStyleCollectionLoadOptions:interface'
-        name: Excel.Interfaces.PivotTableStyleCollectionLoadOptions
-        fullName: Excel.Interfaces.PivotTableStyleCollectionLoadOptions
-      - name: ' & '
-        fullName: ' & '
-      - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
-        name: Excel.Interfaces.CollectionLoadOptions
-        fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'office!OfficeExtension.LoadOption:interface'
-    name: OfficeExtension.LoadOption
-  - uid: 'excel!Excel.PivotTableStyleCollection#setDefault~0:complex'
-    name: PivotTableStyle | string
-    fullName: Excel.PivotTableStyle | string
-    spec.typeScript:
-      - uid: 'excel!Excel.PivotTableStyle:class'
-        name: PivotTableStyle
-        fullName: Excel.PivotTableStyle
-      - name: ' | string'
-        fullName: ' | string'
-  - uid: 'excel!Excel.Interfaces.PivotTableStyleCollectionData:interface'
-    name: Excel.Interfaces.PivotTableStyleCollectionData
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getDefault(): Excel.PivotTableStyle;'
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyle:class" />
+      description: 作为当前默认 PivotTableStyle 的 PivotTableStyle 对象。
+- name: getItem(name)
+  uid: excel!Excel.PivotTableStyleCollection#getItem:member(1)
+  package: excel!
+  fullName: getItem(name)
+  summary: >-
+    按名称获取 PivotTableStyle。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItem(name: string): Excel.PivotTableStyle;'
+    parameters:
+    - id: name
+      description: 要检索的 PivotTableStyle 的名称。
+      type: string
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyle:class" />
+      description: 其名称与输入匹配的 PivotTableStyle 对象。
+- name: getItemOrNullObject(name)
+  uid: excel!Excel.PivotTableStyleCollection#getItemOrNullObject:member(1)
+  package: excel!
+  fullName: getItemOrNullObject(name)
+  summary: >-
+    按名称获取 PivotTableStyle。 如果没有 PivotTableStyle，将返回 null 对象。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItemOrNullObject(name: string): Excel.PivotTableStyle;'
+    parameters:
+    - id: name
+      description: 要检索的 PivotTableStyle 的名称。
+      type: string
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyle:class" />
+      description: 其名称与输入匹配的 PivotTableStyle 对象。
+- name: load(options)
+  uid: excel!Excel.PivotTableStyleCollection#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.PivotTableStyleCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.PivotTableStyleCollection;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.PivotTableStyleCollectionLoadOptions:interface" /> & <xref uid="excel!Excel.Interfaces.CollectionLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyleCollection:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.PivotTableStyleCollection#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.PivotTableStyleCollection;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyleCollection:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.PivotTableStyleCollection#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.PivotTableStyleCollection;'
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: <xref uid="office!OfficeExtension.LoadOption:interface" />
+    return:
+      type: <xref uid="excel!Excel.PivotTableStyleCollection:class" />
+      description: ''
+- name: setDefault(newDefaultStyle)
+  uid: excel!Excel.PivotTableStyleCollection#setDefault:member(1)
+  package: excel!
+  fullName: setDefault(newDefaultStyle)
+  summary: >-
+    设置在父对象范围内使用的默认 PivotTableStyle。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'setDefault(newDefaultStyle: PivotTableStyle | string): void;'
+    parameters:
+    - id: newDefaultStyle
+      description: 应为新的默认值的 PivotTableStyle 对象的 PivotTableStyle 对象或名称。
+      type: <xref uid="excel!Excel.PivotTableStyle:class" /> | string
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.PivotTableStyleCollection#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Excel.PivotTableStyleCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Excel.Interfaces.PivotTableStyleCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.PivotTableStyleCollectionData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotTableStyleCollectionData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 2818ae2b03dbafd7bb3d6370e6b80276cecbd3d5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49316892"
