--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.tabledata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.tabledata.yml
@@ -1,162 +1,149 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.TableData:interface'
-    summary: 描述通过调用返回的数据的接口`table.toJSON()`<!-- -->.
-    name: Excel.Interfaces.TableData
-    fullName: Excel.Interfaces.TableData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.TableData#columns:member'
-      - 'excel!Excel.Interfaces.TableData#id:member'
-      - 'excel!Excel.Interfaces.TableData#name:member'
-      - 'excel!Excel.Interfaces.TableData#rows:member'
-      - 'excel!Excel.Interfaces.TableData#showHeaders:member'
-      - 'excel!Excel.Interfaces.TableData#showTotals:member'
-      - 'excel!Excel.Interfaces.TableData#sort:member'
-      - 'excel!Excel.Interfaces.TableData#style:member'
-  - uid: 'excel!Excel.Interfaces.TableData#columns:member'
-    summary: |-
-      表示表中所有列的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.TableData
+uid: excel!Excel.Interfaces.TableData:interface
+package: excel!
+fullName: Excel.Interfaces.TableData
+summary: 描述通过调用返回的数据的接口 `table.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: columns
+  uid: excel!Excel.Interfaces.TableData#columns:member
+  package: excel!
+  fullName: columns
+  summary: >-
+    表示表中所有列的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: columns
-    fullName: columns
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columns?: Excel.Interfaces.TableColumnData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.TableData#columns~0:complex'
-  - uid: 'excel!Excel.Interfaces.TableData#id:member'
-    summary: |-
-      返回用于唯一标识指定工作簿中表的值。 即使表被重命名，标识符的值仍保持不变。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.TableData#name:member'
-    summary: |-
-      表的名称。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columns?: Excel.Interfaces.TableColumnData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.TableColumnData:interface" />[]
+- name: id
+  uid: excel!Excel.Interfaces.TableData#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    返回用于唯一标识指定工作簿中表的值。 即使表被重命名，标识符的值仍保持不变。
 
-      表的集名称必须遵循 "[重命名 Excel 表" 一](https://support.office.com/article/Rename-an-Excel-table-FBF49A4F-82A3-43EB-8BA2-44D21233B114)文中指定的准则。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.TableData#rows:member'
-    summary: |-
-      表示表中所有行的集合。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: name
+  uid: excel!Excel.Interfaces.TableData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    表的名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rows
-    fullName: rows
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rows?: Excel.Interfaces.TableRowData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.TableData#rows~0:complex'
-  - uid: 'excel!Excel.Interfaces.TableData#showHeaders:member'
-    summary: |-
-      指定标题行是否可见。 该值可以设置为显示或删除标头行。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showHeaders
-    fullName: showHeaders
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showHeaders?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.TableData#showTotals:member'
-    summary: |-
-      指定汇总行是否可见。 该值可以设置为显示或删除总计行。
+    表的集名称必须遵循 " [重命名 Excel 表" 一](https://support.office.com/article/Rename-an-Excel-table-FBF49A4F-82A3-43EB-8BA2-44D21233B114) 文中指定的准则。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showTotals
-    fullName: showTotals
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showTotals?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.TableData#sort:member'
-    summary: |-
-      表示表的排序。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: sort
-    fullName: sort
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sort?: Excel.Interfaces.TableSortData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.TableSortData:interface'
-  - uid: 'excel!Excel.Interfaces.TableData#style:member'
-    summary: |-
-      表示表格样式的常量值。 可能的值为： "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleDark1" 到 "TableStyleDark11"。 还可以指定工作簿中显示的用户定义的自定义样式。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: rows
+  uid: excel!Excel.Interfaces.TableData#rows:member
+  package: excel!
+  fullName: rows
+  summary: >-
+    表示表中所有行的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'excel!Excel.Interfaces.TableData#columns~0:complex'
-    name: 'Excel.Interfaces.TableColumnData[]'
-    fullName: 'Excel.Interfaces.TableColumnData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.TableColumnData:interface'
-        name: Excel.Interfaces.TableColumnData
-        fullName: Excel.Interfaces.TableColumnData
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'excel!Excel.Interfaces.TableData#rows~0:complex'
-    name: 'Excel.Interfaces.TableRowData[]'
-    fullName: 'Excel.Interfaces.TableRowData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.TableRowData:interface'
-        name: Excel.Interfaces.TableRowData
-        fullName: Excel.Interfaces.TableRowData
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'excel!Excel.Interfaces.TableSortData:interface'
-    name: Excel.Interfaces.TableSortData
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rows?: Excel.Interfaces.TableRowData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.TableRowData:interface" />[]
+- name: showHeaders
+  uid: excel!Excel.Interfaces.TableData#showHeaders:member
+  package: excel!
+  fullName: showHeaders
+  summary: >-
+    指定标题行是否可见。 该值可以设置为显示或删除标头行。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showHeaders?: boolean;'
+    return:
+      type: boolean
+- name: showTotals
+  uid: excel!Excel.Interfaces.TableData#showTotals:member
+  package: excel!
+  fullName: showTotals
+  summary: >-
+    指定汇总行是否可见。 该值可以设置为显示或删除总计行。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showTotals?: boolean;'
+    return:
+      type: boolean
+- name: sort
+  uid: excel!Excel.Interfaces.TableData#sort:member
+  package: excel!
+  fullName: sort
+  summary: >-
+    表示表的排序。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sort?: Excel.Interfaces.TableSortData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.TableSortData:interface" />
+- name: style
+  uid: excel!Excel.Interfaces.TableData#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    表示表格样式的常量值。 可能的值为： "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleDark1" 到 "TableStyleDark11"。 还可以指定工作簿中显示的用户定义的自定义样式。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 8ce1ed201822b9ea890f934cb4bc9709bcf9f647
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49336947"
